force-app/main/default/objects/ccrz__E_ProductMedia__c/ccrz__E_ProductMedia__c.object-meta.xml
<CustomObject>
    <description>Encapsulates media such as hero, thumbnail images, product brochures, owner&apos;s manuals, assembly guides, and videos associated with a product. Media&apos;s source could be in a form of attachment, static resource, or external resource(URI).</description>
    <label>CC Product Media</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Media Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>