force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__AltMessage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AltMessage__c</fullName>
    <description>Used in the alt attribute of the Image tag to provide search optimization.</description>
    <label>AltMessage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>