force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__FilePath__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilePath__c</fullName>
    <description>Full file path for the image. If this is an attachment, then it would be the file name only. If it is a static resource, then the path within the resource</description>
    <label>File Path</label>
    <length>128</length>
    <type>Text</type>
</CustomField>