force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Locale corresponding to this entry. Different locales can have different product images</description>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>