force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__MediaType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MediaType__c</fullName>
    <description>Determines where this image is displayed. Values are &quot;Product Image&quot;, &quot;Product Image Thumbnail&quot;, &quot;Product Search Image&quot;, &quot;Alternate Image&quot;</description>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Images</fullName>
            </value>
            <value>
                <fullName>Alternate Thumbnails</fullName>
            </value>
            <value>
                <fullName>Datasheets</fullName>
            </value>
            <value>
                <fullName>Safety Documents</fullName>
            </value>
            <value>
                <fullName>Sales Brochures</fullName>
            </value>
            <value>
                <fullName>Product Search Image</fullName>
            </value>
            <value>
                <fullName>Owner&apos;s Manuals</fullName>
            </value>
            <value>
                <fullName>Assembly Guides</fullName>
            </value>
            <value>
                <fullName>JPG Image</fullName>
            </value>
            <value>
                <fullName>Product Image</fullName>
            </value>
            <value>
                <fullName>Product Image Thumbnail</fullName>
            </value>
            <value>
                <fullName>Flash Files</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>SVG Interactive Diagram</fullName>
            </value>
            <value>
                <fullName>Specification Sheets</fullName>
            </value>
            <value>
                <fullName>Product Bulletins</fullName>
            </value>
            <value>
                <fullName>Operating Manuals</fullName>
            </value>
            <value>
                <fullName>SDS Documents</fullName>
            </value>
            <value>
                <fullName>Label 1s</fullName>
            </value>
            <value>
                <fullName>Label 2s</fullName>
            </value>
            <value>
                <fullName>Catalog Sheets</fullName>
            </value>
            <value>
                <fullName>Analytical Procedures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>