force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <description>Reference to the category entry to which this media corresponds</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>E_ProductMedias</relationshipLabel>
    <relationshipName>E_ProductMedias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>