force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__ProductMediaId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductMediaId__c</fullName>
    <description>External id for this entry - can be used for updates</description>
    <externalId>true</externalId>
    <label>Product Media Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>