force-app/main/default/objects/ccrz__E_ProductMedia__c/fields/ccrz__StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StaticResourceName__c</fullName>
    <description>Pointing to static resource containing the images</description>
    <inlineHelpText>1. Use prefix &quot;c__&quot; for static resource defined in subscriber org
2. StaticResource name without prefix refers to static resource inside managed package</inlineHelpText>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>