force-app/main/default/objects/ccrz__E_ProductMedia__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__MediaType__c</columns>
    <columns>ccrz__ProductMediaSource__c</columns>
    <columns>ccrz__Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__MediaType__c</field>
        <operation>equals</operation>
        <value>Product Image</value>
    </filters>
    <label>All</label>
</ListView>